--- a/frontend/src/components/Header.css
+++ b/frontend/src/components/Header.css
@@ -1,6 +1,5 @@
-
 .section {
-    padding-top: 5rem;
+    padding: 100px 0;
     text-align: center;
   }
   
@@ -13,10 +12,14 @@
     justify-content: center;
     align-items: center;
   }
+
+
   
+  
+  .transaction-table,
   .statistics,
   .chart,
   .about-us {
     background-color: #222831;
-    color: #EEEEEE;
-  } 
+  }
+  
